# process-compose

./: .editorconfig  .env.local  .gitignore  .golangci.yaml  .goreleaser.yaml  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  default.nix  flake.nix  go.mod  go.sum  golangci.yaml  index.html  process-compose-win.yaml  process-compose.override.yaml  process-compose.yaml  rust-toolchain.toml  shell.nix  sitemap.xml  tags.json  test-simple-interactive.yaml  test_loop.bash  test_loop.ps1
.agent/workflows/: generate-release-notes.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: defect.md  feature_request.md
.github/workflows/: announce-x.yml  docs.yml  go.yml  nix.yml  rust.yml  stale.yml
.idx/: dev.nix
.zed/: debug.json
blog/: index.html
blog/embedded-mcp-server-support-in-process-compose-v1940/: index.html
blog/interactive-processes-are-here--v1850/: index.html
cli/process-compose/: index.html
cli/process-compose_analyze/: index.html
cli/process-compose_analyze_critical-chain/: index.html
cli/process-compose_attach/: index.html
cli/process-compose_completion/: index.html
cli/process-compose_completion_bash/: index.html
cli/process-compose_completion_fish/: index.html
cli/process-compose_completion_powershell/: index.html
cli/process-compose_completion_zsh/: index.html
cli/process-compose_down/: index.html
cli/process-compose_graph/: index.html
cli/process-compose_info/: index.html
cli/process-compose_list/: index.html
cli/process-compose_namespace/: index.html
cli/process-compose_namespace_list/: index.html
cli/process-compose_namespace_restart/: index.html
cli/process-compose_namespace_start/: index.html
cli/process-compose_namespace_stop/: index.html
cli/process-compose_process/: index.html
cli/process-compose_process_get/: index.html
cli/process-compose_process_list/: index.html
cli/process-compose_process_logs/: index.html
cli/process-compose_process_logs_truncate/: index.html
cli/process-compose_process_monitor/: index.html
cli/process-compose_process_ports/: index.html
cli/process-compose_process_restart/: index.html
cli/process-compose_process_scale/: index.html
cli/process-compose_process_start/: index.html
cli/process-compose_process_stop/: index.html
cli/process-compose_project/: index.html
cli/process-compose_project_is-ready/: index.html
cli/process-compose_project_state/: index.html
cli/process-compose_project_update/: index.html
cli/process-compose_recipe/: index.html
cli/process-compose_recipe_list/: index.html
cli/process-compose_recipe_pull/: index.html
cli/process-compose_recipe_remove/: index.html
cli/process-compose_recipe_search/: index.html
cli/process-compose_recipe_show/: index.html
cli/process-compose_run/: index.html
cli/process-compose_up/: index.html
cli/process-compose_version/: index.html
cli/process-compose_version_update/: index.html
client/: index.html
configuration/: index.html
contributing/: index.html
crates/client/: Cargo.toml  README.md
crates/client/src/: cli.rs  lib.rs
crates/client/src/cli/: exec.rs  mod.rs  types.rs
crates/client/src/cli/cmd/: flags.rs  mod.rs  parent.rs  up.rs
crates/client/src/cli/go/: mod.rs
crates/client/src/cli/go/config/: flags.rs  mod.rs
crates/example/: Cargo.toml  build.rs
crates/example/src/: main.rs
crates/openapi-client/: .gitignore  Cargo.toml  README.md  build.rs  publish.sh  swagger.3.json  swagger.json
crates/openapi-client/src/: lib.rs
crates/openapi-client/tests/: mod.rs
demo/: demo.tape  process-compose.yaml
docs/: release-notes.md
examples/: .example_env  data_aggregation_workflow.yaml  mcp-example.yaml
fixtures/: process-compose-chain-arrow.yaml  process-compose-chain-rhombus.yaml  process-compose-chain-with-errors.yaml  process-compose-chain.yaml  process-compose-dependent-on-failing-log-line.yml  process-compose-many-for-one.yaml  process-compose-odd-then-even.yaml  process-compose-one-for-many.yaml  process-compose-with-log.yaml
fixtures-code/: .env.test  process-compose-chain-exit.yaml  process-compose-chain.yaml  process-compose-circular.yaml  process-compose-env-file.yaml  process-compose-non-circular.yaml  process-compose-scale.yaml  process-compose-shutdown-inorder.yaml  process-compose-transitive-dep.yaml  process-compose-with-extends.yaml  process-compose-with-log.yaml
graph/: index.html
health/: index.html
installation/: index.html
interactive-processes/: index.html
intro/: index.html
issues/issue_102/: process-compose.yaml
issues/issue_107/: after.4h.alloc_space.txt  after.4h.txt  process-compose.yaml
issues/issue_111/: process-compose-probes.yaml  process-compose.yaml
issues/issue_120/: process-compose.yaml
issues/issue_156/: process-compose.yaml
issues/issue_166/: process-compose.yaml
issues/issue_177/: process-compose.override.yml  process-compose.yml
issues/issue_189/: process-compose.yaml
issues/issue_191/: process-compose.yaml
issues/issue_200/: process-compose.yaml
issues/issue_214/: process-compose.yaml
issues/issue_237/: logger.sh  process-compose.yml
issues/issue_238/: process-compose.yaml
issues/issue_239/: process-compose.yaml
issues/issue_258/: devbox.json  process-compose.yaml
issues/issue_274/: process-compose.json
issues/issue_280/: process-compose.yaml
issues/issue_316/: process-compose.yaml
issues/issue_347/: process-compose.yaml
issues/issue_362/: process-compose.yaml  test-all-sequences.sh  test-cargo-like.sh  test-clear-screen.sh  test-clear-variants.sh  test-clear.sh  (+4 more)
launcher/: index.html
logging/: index.html
mcp-server/: index.html
merge/: index.html
scheduled-processes/: index.html
schemas/: process-compose-schema.json
scripts/: get-pc.sh  update-vendor-hash.sh
search/: search_index.json
sponsors/: index.html
src/: config.go  logger_facade.go  logger_interface.go  main.go  nil_logger.go  pc_string.go  process.go  project.go  project_test.go  system_test.go
tags/: index.html
tui/: index.html
www/: mkdocs.yml
(+331 files in other folders)
