[package]
name = "process-compose-client"
version = "1.64.1"
description = "Client for Process Compose via OpenAPI and/or project file"
license = "Apache-2.0"
edition = "2021"
include = [
  "src/**",
  "Cargo.toml",
  "../../src/docs/swagger.json",
  "../../schemas/process-compose-schema.json",
  "../../README.md",
]

[lib]
crate-type = ["rlib"]

[dependencies]
serde_json = { version = "^1.0", default-features = false }
openapiv3 = { version = "^2", default-features = false }

progenitor = { version = "^0.11", default-features = false, optional = true }
prettyplease = { version = "^0.2.24", optional = true }
syn = { version = "^2.0.80", optional = true }
schemars = { version = "^0.8.*" } # update to 1.0 blocked by typify

typify = { version = "^0.4", default-features = false, optional = true }

process-wrap = { version = "9.0", default-features = false, optional = true}

cgp = { version = "^0.4.2", default-features = false, optional = true }

clap = {version = "4.5", default-features = false, features = ["derive"], optional = true}

[features]
default = ["progenitor", "typify", "cli"]

typify = ["dep:typify", "dep:prettyplease"]

progenitor = ["dep:progenitor", "dep:prettyplease", "dep:syn"]

cli = ["dep:process-wrap", "dep:cgp", "dep:clap"]
