[package]
name = "process-compose-client"
version = "1.75.2"
description = "Client for Process Compose via OpenAPI and/or project file"
license = "Apache-2.0"
edition = "2021"
include = [
  "src/**",
  "Cargo.toml",
  "../../src/docs/swagger.json",
  "../../schemas/process-compose-schema.json",
  "../../README.md",
]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["derive"], optional = true}
serde_json = { version = "^1.0", default-features = false }
openapiv3 = { version = "^2.2", default-features = false }
url = { version = "^2.5", default-features = false, optional = true }

progenitor = { version = "^0.11", default-features = false, optional = true }
prettyplease = { version = "^0.2.24", optional = true }
syn = { version = "^2.0.80", optional = true }
schemars = { version = "^0.8.*" } # update to 1.0 blocked by typify

typify = { version = "^0.5", default-features = false, optional = true }

process-wrap = { version = "9.0", default-features = false, optional = true, features = ["tokio1", "kill-on-drop", ]}


clap = {version = "4.5", default-features = false, features = ["derive", "std", "env", "help", "usage", "error-context", "suggestions"], optional = true}
bon = { version = "3.8", default-features = false, optional = true}
struct_field_names = { version = "0.2", default-features = false, optional = true}

[features]
default = []

typify = ["dep:typify", "dep:prettyplease"]

progenitor = ["dep:progenitor", "dep:prettyplease", "dep:syn"]

cli = ["dep:process-wrap", "dep:clap", "dep:struct_field_names"]

ws = ["dep:url", "dep:serde"]

builder = ["dep:bon"]