[package]
name = "process-compose-openapi-client"
version = "1.40.1"
edition = "2021"
description = "OpenAPI client for Process Compose"
license = "Apache-2.0"

[dependencies]
progenitor-client = { version = "^0.8.0" }
reqwest = { version = "^0.12.9", default-features = false, features = [
  "json",
  "stream",
] }
serde = { version = "^1.0.42", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0.42", default-features = false }

[dev-dependencies]
tokio = { version = "^1.41", features = ["macros"] }

[build-dependencies]
progenitor = { version = "^0.8.0" }
syn = { version = "^2.0.85" }
prettyplease = { version = "^0.2.25" }
serde_json = { version = "^1.0.42", default-features = false }
