[package]
name = "process-compose-openapi-client"
version = "1.46.0"
description = "OpenAPI client for Process Compose"
license = "Apache-2.0"
edition = "2021"
include = [
  "src/**",
  "Cargo.toml",
  "build.rs",
  "../../src/docs/swagger.json",
  "../../README.md",
]

[lib]
crate-type = ["rlib"]

[dependencies]
progenitor-client = { version = "0.9" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.41", features = ["macros"] }

[build-dependencies]
progenitor = { version = "0.9" }
syn = { version = "2.0.85" }
prettyplease = { version = "0.2.25" }
serde_json = { version = "1.0", default-features = false }
